k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dalam-kemasan
  labels:
    name: dalam-kemasan
