k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-loadbalancer
  namespace: dalam-kemasan
spec:
  type: LoadBalancer
  selector:
    app: auth-service
  ports:
  - port: 80
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer
  namespace: dalam-kemasan
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-loadbalancer
  namespace: dalam-kemasan
spec:
  type: LoadBalancer
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-loadbalancer
  namespace: dalam-kemasan
spec:
  type: LoadBalancer
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
